--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,30 @@
-# Compiled class file
+#기타 문서
+*.psd
+*.pptx
+*.docx
+**/00_plan/
+_ing/
+**/node_modules/
+
+#프로젝트 설정 파일
+.vscode
+.classpath
+.project
+.settings/
+
+###컴파일된 클래스 파일
 *.class
 
-# Log file
+#로그 파일
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
+#모바일 툴
 .mtj.tmp/
 
-# Package Files #
+# BlueJ
+*.ctxt
+
+#패키지 파일
 *.jar
 *.war
 *.nar
@@ -19,5 +33,85 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+#가상머신 충돌 로그
 hs_err_pid*
+replay_pid*
+
+#Mac OS
+.DS_Store
+
+# CS56 specific: Secrets files
+localhost.json
+heroku.json
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+# Spring Boot Tooling
+.sts4-cache/
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
