--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,9 +41,10 @@
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported> <!-- 클라이언트가 다수일 경우 클라이언트들이 동시에 데이터를 전송할 수 있기에 해당 제어를 위해 비동기 처리 -->
 		<!-- 업로드 관련 설정 -->
 		<multipart-config>
-			<location>C:\\JAVA\\stsApp\\TGT\\src\\main\\webapp\\resources\\upload\\temp</location><!-- 업로드 폴더 지정 -->
+			<location>C:\\upload\\temp</location><!-- 업로드 폴더 지정 -->
 			<max-file-size>20971520</max-file-size> <!--1MB * 20 -->
 			<max-request-size>41943040</max-request-size><!-- 40MB -->
 			<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
